--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,10 +6,9 @@ COPY tools/ .
 
 ARG DB_NAME \
     DB_USER \
-    DB_PASS 
+    DB_PASS \
+    MYSQL_ROOT_PASSWORD
 
 RUN sh create_db.sh && rm create_db.sh
-
-USER $MYSQL_USER
 
 CMD ["mysqld_safe", "--skip-log-error"]
